; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_license_print_expiration_info.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_license_print_expiration_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@current_license = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@NOTICE = common dso_local global i32 0, align 4
@ERRCODE_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"your Timescale Enterprise License expires on %s\00", align 1
@timestamptz_out = common dso_local global i32 0, align 4
@printed_license_expiration_warning = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @license_print_expiration_info() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @current_license, i32 0, i32 0), align 8
  %2 = call i32 @TIMESTAMP_NOT_FINITE(i32 %1)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %17, label %4

4:                                                ; preds = %0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @current_license, i32 0, i32 1), align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %4
  %8 = load i32, i32* @NOTICE, align 4
  %9 = load i32, i32* @ERRCODE_WARNING, align 4
  %10 = call i32 @errcode(i32 %9)
  %11 = load i32, i32* @timestamptz_out, align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @current_license, i32 0, i32 0), align 8
  %13 = call i32 @DirectFunctionCall1(i32 %11, i32 %12)
  %14 = call i32 @DatumGetCString(i32 %13)
  %15 = call i32 @errmsg(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = call i32 @ereport(i32 %8, i32 %15)
  br label %19

17:                                               ; preds = %4, %0
  store i32 0, i32* @printed_license_expiration_warning, align 4
  %18 = call i32 (...) @license_print_expiration_warning_if_needed()
  br label %19

19:                                               ; preds = %17, %7
  ret void
}

declare dso_local i32 @TIMESTAMP_NOT_FINITE(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @DatumGetCString(i32) #1

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1

declare dso_local i32 @license_print_expiration_warning_if_needed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
